@@ -5,6 +5,7 @@
   * BHD: Resolved "500 Server Error" when uploading a .nfo file
   * BHD: Fixed translation of "(E-)AC-3" to "DD(P)" with Atmos
   * Fixed detection of Opus audio codec
+  * Print message to stderr if there is a newer version available
 
 
 2021.08.12
